--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,14 @@
-.body {
+input {
+    color: white;
     background-color: black;
+}
+
+::-ms-reveal {
+    filter: invert(100%);
+}
+
+#NotReady {
+
+    position: fixed;
+    bottom: 0;
 }
