--- a/src/Components/decrypt/Decrypt.css
+++ b/src/Components/decrypt/Decrypt.css
@@ -1,17 +1,13 @@
-#Content {
+#ChildItems_Decrypt {
+    padding: auto;
+    
+}
+#Content_Decrypt {
     margin: auto;
     width: 50%;
-    padding: 10px;
+    padding: 1px;
     border-width: 1px;
     justify-content: center;
     min-height: 100vh;
-}
-
-#ChildItems {
-        margin: auto;
-        display:inline-block;
-        text-align: center;
-        padding: 30px;
-        gap: 30px;
-        margin-left: 10px;
+    
 }
